[FEAT]Home Screen with horizontal navs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,15 @@
         <activity android:name=".login.LoginActivity" />
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait" />
-        <activity android:name=".splash.SplashActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:screenOrientation="portrait" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+        <activity android:name=".splash.SplashActivity">
+
         </activity>
         <service android:name=".notifications.NotificationService">
             <intent-filter>
