--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v2.0.9'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.android.support:design:26.1.0'
+    // for tablayout
+    implementation "com.google.android.material:material:1.0.0"
 }
