--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v2.0.9'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.android.support:design:26.1.0'
 }
