--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,14 @@
         <activity android:name=".login.LoginActivity" />
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait" />
-        <activity android:name=".splash.SplashActivity">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Scoreboard.ScoreboardActivity">
+        <activity android:name=".splash.SplashActivity">
         </activity>
     </application>
 
