[FIX] Back press events ,load time on about us

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,14 @@
         <activity android:name=".Home.MarioActivity" />
         <activity android:name=".Home.HopeThisWorks" />
         <activity
+            android:noHistory="true"
+
             android:name=".login.LoginActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
+            android:noHistory="true"
+
             android:screenOrientation="portrait" />
         <activity
             android:name=".splash.SplashActivity"
