Change logout button, and change app name

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
+    aaptOptions { cruncherEnabled = false }
     buildTypes {
         release {
             minifyEnabled false
