--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:hardwareAccelerated="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Home.HameedActivity"></activity>
         <activity android:name=".sponsors.SibiActivity" />
@@ -18,12 +19,11 @@
         <activity android:name=".Home.HopeThisWorks" />
         <activity
             android:noHistory="true"
-
+            android:hardwareAccelerated="false"
             android:name=".login.LoginActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
-
             android:screenOrientation="portrait" />
         <activity
             android:name=".splash.SplashActivity"
